--- a/src/cv/Projects/index.scss
+++ b/src/cv/Projects/index.scss
@@ -1,10 +1,13 @@
 .Projects {
 
     & article.Project {
-        border:solid thin gray;
+        border-width:thin;
+        border-style:solid none;
+        border-color:gray;
         margin: 2em 0 0 0;
-        border-radius:0.5em;
+        //border-radius:0.5em;
         background:white;
+        padding:0.5em;
         filter: drop-shadow(0px 0px 0.5rem rgba(128, 128, 128, 0.1));
 
         @media print {
@@ -32,15 +35,16 @@
                 padding-bottom:2em;
             }
             &.description, &.responsibilities {
-                font-size:1.2rem;
             }
             &.stack {
-                padding:3em 0.5em 0.5em 0.5em;
-                display:flex;
-                font-weight:bold;
+
             }
 
             &:not(:last-child) {
+            }
+
+            & h3 {
+                display:inline-block;
             }
 
             & div {
@@ -49,17 +53,15 @@
             & .title {
             }
             & .description {
-                padding-left: 0.5em;
-                
-                & > .element {
+            }
+            & .element {
 
-                    &:not(:first-child) {
-                        padding-left:0.5em;
-                    }
+                &:not(:first-child) {
+                    padding-left:0.5em;
+                }
 
-                    &:not(:last-child):after {
-                        content:",";
-                    }
+                &:not(:last-child):after {
+                    content:",";
                 }
             }
         }
