--- a/src/cv/Skills/index.scss
+++ b/src/cv/Skills/index.scss
@@ -1,7 +1,20 @@
 article.Skills {
+    border-width:thin;
+    border-style:solid none;
+    border-color:gray;
+    margin: 2em 0 0 0;
+    //border-radius:0.5em;
+    background:white;
+    filter: drop-shadow(0px 0px 0.5rem rgba(128, 128, 128, 0.1));
+    padding:0.5em;
 
     & > section {
-        max-width:100%;
+
+        & > h3 {
+            display:inline-block;
+            padding:0;
+            margin:0;
+        }
 
         & div {
             display:flex;
