fixing data and typos

--- a/src/cv/Projects/index.scss
+++ b/src/cv/Projects/index.scss
@@ -24,6 +24,7 @@
             &.responsibilities {
             }
             &.stack {
+                padding:0.5em 0;
 
             }
         }
