--- a/src/cv/Common/Tooltip/index.scss
+++ b/src/cv/Common/Tooltip/index.scss
@@ -10,6 +10,7 @@
             border-radius: 2em;
             position: absolute;
             top: 0;
+            left: 0;
             transform: translate(-50%, -100%);
             white-space: nowrap;
 
